test/bad/function_declaration_09.mpp
fun f(a:MyType):int { return 1; };
